# kernel-methods-from-scratch

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: 01-kernel-visualisation.ipynb
src/kernels/: __init__.py  base.py  kernels.py
tests/: test_kernels.py
